# NovaOpenGL

./: .gitignore  CMakeLists.txt
opengl_3d/: ApplicationFactory.cpp  ApplicationFactory.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraControlInterface.h  CommandDispatch.cpp  CommandDispatch.h  Config.cpp  Config.h  IOEvent.cpp  IOEvent.h  IOService.cpp  IOService.h  OrbitCameraControl.cpp  OrbitCameraControl.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  Renderable.h  RenderableManager.cpp  RenderableManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SharedLibrary.h  StaticCameraControl.h  TextRenderingService.cpp  TextRenderingService.h  TextureManager.cpp  TextureManager.h  TrackballCameraControl.cpp  TrackballCameraControl.h  ViewportManager.cpp  ViewportManager.h  World.cpp  (+1 more)
opengl_3d/example/: nova.conf
opengl_3d/example/nanosuit/: scene.conf
opengl_3d/plugins/: NovaMesh.cpp
opengl_3d/plugins/Assimp/: AssimpRenderable.cpp  AssimpRenderable_Mesh.cpp  AssimpRenderable_Mesh.h  AssimpRenderable_Model.cpp  AssimpRenderable_Model.h  CMakeLists.txt
opengl_3d/plugins/FreeTypeTextRenderer/: CMakeLists.txt  FreeTypeRenderer.cpp
opengl_3d/plugins/NovaMesh/: NovaMesh.cpp  NovaMesh_Mesh.cpp  NovaMesh_Mesh.h  NovaMesh_Model.cpp  NovaMesh_Model.h
opengl_3d/plugins/OIIOTextureProvider/: CMakeLists.txt  OIIOTextureProvider.cpp
opengl_3d/plugins/SOILTextureProvider/: CMakeLists.txt  SOILTextureProvider.cpp
opengl_3d/shaders/: BasicLineShader.h  BasicMeshShader.h  BasicTextShader.h  ViewportAxisShader.h  ViewportChromeShader.h
